# kafscale

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  Makefile-MK  NOTICE  PLAN.md  PR-INSTRUCTIONS.md  README.md  SECURITY.md  buf.gen.yaml  buf.work.yaml  go.mod  go.sum  kafscale-spec.md  kscale-spec.md  security-tasks.md
.devcontainer/act-runner/: Dockerfile
.github/: pull_request_template.md
.github/workflows/: ci.yml  codeql.yml  docker.yml  scorecard.yml  stage-release.yml
addons/: README.md
addons/processors/: README.md
docs/: architecture.md  development.md  kafsql-arch.md  lfs-proxy-data-flow.md  mcp.md  metrics.md  operations.md  ops-api.md  ops-mcp.md  overview.md  protocol.md  quickstart.md  roadmap.md  security.md  storage.md  supported.md  user-guide.md
examples/: Makefile  REVIEW.md
hack/: check_coverage.sh  check_license_headers.py  compare_docs.py  docs_sync_map.json  license_headers.py
lfs-client-sdk/: Makefile
lfs-client-sdk/python/: README.md  pyproject.toml
lfs-client-sdk/python/kafscale_lfs_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
lfs-client-sdk/python/lfs_sdk/: __init__.py  envelope.py  producer.py  resolver.py
lfs-client-sdk/python/tests/: test_envelope.py
proto/: buf.yaml
scripts/: demo-platform-apply.sh  demo-platform.sh  e72-browser-demo.sh  iceberg-demo.sh  idoc-explode-demo.sh  industrial-lfs-demo.sh  lfs-demo.sh  medical-lfs-demo.sh  stage-release-local.sh  verify-lfs-urls.sh  video-lfs-demo.sh
test/: env_doc_test.go
ui/: embed.go
(+533 files in other folders)
