[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kafscale-lfs-sdk"
version = "0.1.0"
description = "Client-side LFS helpers for Kafka."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
  "confluent-kafka>=2.5.0",
  "boto3>=1.34.0",
  "requests>=2.32.0"
]

[project.optional-dependencies]

[tool.pytest.ini_options]
testpaths = ["tests"]
